cabal-version:      3.4
name:               recho
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Franco Cortesi
maintainer:         franco@mlabs.city
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable recho
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
                    , aeson
                    , servant
                    , servant-server
                    , wai
                    , warp
                    , wai-extra
                    , time
    hs-source-dirs:   app
    default-language: GHC2021
